--- a/CSSProject/css/index.css
+++ b/CSSProject/css/index.css
@@ -17,6 +17,7 @@ p{
     color: white;
 }*/
 
+/*
 h3{
     background-color: blue;
     color: white;
@@ -35,4 +36,21 @@ p{
 #small-id{
     background-color: royalblue;
     color: white;
+}*/
+
+/*h1{
+    background-color: royalblue;
 }
+
+h2 {
+    background-color: aqua;
+}
+
+h3{
+    background-color: lightblue;
+}*/
+
+h1, h2, h3{
+    background-color: aqua;
+}
+
