--- a/website/css/index.css
+++ b/website/css/index.css
@@ -1,4 +1,24 @@
 body{
     font-family: 'Montserrat', sans-serif;
+    line-height: 1.5;
+    padding: 0;
+    margin: 0;
+    background-color: white;
+    color: black;
+
+}
+
+.container{
+    width: 78%;
+    margin: auto;
+    overflow: hidden;
+}
+
+
+header{
+    background-color: #1b1e23;
+    color: white;
+    min-height: 60px;
+    padding: 20px 0 0 0;
 
 }
