bootstrap simple landing page with mobile display completed

--- a/BootstrapProject/css/index.css
+++ b/BootstrapProject/css/index.css
@@ -4,3 +4,27 @@
     margin: 0;
 
 }
+
+
+#banner-desktop{
+    background-color: darkslateblue;
+}
+
+
+#banner-desktop h1{
+
+    margin-top: 150px;
+}
+
+#banner-desktop button{
+    height: 80px;
+    width: 160px;
+    border-radius: 7px;
+    border: none;
+    color: white;
+    background-color: #6d577d;
+}
+
+#banner-mobile{
+    background-color: #a38ab5;
+}
